Rework calculations of text alignment classes with correct naming conventions

--- a/scss/1.settings/_font-presets.scss
+++ b/scss/1.settings/_font-presets.scss
@@ -8,46 +8,49 @@
  * Define font-size and line-height in space-units
  */
 
-$baseline-correction: 0.15 !default;
-$base-font-family: Helvetica, Roboto, Arial, sans-serif !default;
-
 // Future variable to apply different baseline corrections and fonts to the font-presets
 $font-families: (
 	default: (
 		family: $base-font-family,
-		baseline-correction: $baseline-correction
+		cap-height: 0.71,
+		x-height: 0.52
 	),
-);
+	secondary:( // TODO support secondary font
+		family: $base-font-family,
+		cap-height: 0.71,
+		x-height: 0.52
+	),
+) !default;
 
 $font-presets: (
 	xlarge:(//Mostly used for H1
-		'small': (1.5rem, 3su),
-		'medium': (2.25rem, 4su),
-		'large': (3rem, 6su)
+		small: (1.5rem, 3su),
+		medium: (2.25rem, 4su),
+		large: (3rem, 6su)
 	),
 	large:(//Mostly used for H2
-		'small': (1.125rem, 3su),
-		'medium': (1.5rem, 3su),
-		'large': (1.5rem, 3su),
+		small: (1.125rem, 3su),
+		medium: (1.5rem, 3su),
+		large: (1.5rem, 3su),
 	),
 	medium:(// Mostly used for Intro text
-		'small': (1rem, 2su),
-		'medium': (1.125rem, 3su),
-		'large': (1.125rem, 3su)
+		small: (1rem, 2su),
+		medium: (1.125rem, 3su),
+		large: (1.125rem, 3su)
 	),
 	default:(// Body font-size
-		'small': (1rem, 2su),
-		'medium': (1rem, 2su),
-		'large': (1rem, 2su),
+		small: (1rem, 2su),
+		medium: (1rem, 2su),
+		large: (1rem, 2su),
 	),
 	small:(
-		'small': (.875rem, 2su),
-		'medium': (.875rem, 2su),
-		'large': (.875rem, 2su)
+		small: (.875rem, 2su),
+		medium: (.875rem, 2su),
+		large: (.875rem, 2su)
 	),
 	tiny:(
-		'small': (.875rem, 2su),
-		'medium': (.75rem, 2su),
-		'large': (.75rem, 2su)
+		small: (.875rem, 2su),
+		medium: (.75rem, 2su),
+		large: (.75rem, 2su)
 	)
 ) !default;
