--- a/scss/2.tools/_space-font.scss
+++ b/scss/2.tools/_space-font.scss
@@ -3,27 +3,30 @@
  * @note if $font-preset-value is set on 'inherit' make sure the 'default' $font-preset is set on the '<body>' element
  *
  * @require $font-preset
+ * @require $font-families with cap-height set
  * @require $space-unit-sizes
- * @require $baseline-correction
  *
  * @param $font-size-value (inherit | string)
  * @param $line-height (list)
- * @param $baseline (true | false | reset)
+ * @param $set-align-classes (true | false | reset)
  *
  * TODO:
  * todo 1: make sure all $space-units sizes are rendered because baseline correction
  * todo 2: make $line-height work to overwrite default line-height
+ * todo 3: support secondary font
  */
 $class-align-baseline: '.align-baseline' !default;
 $class-align-capline: '.align-capline' !default;
 $class-align-xline: '.align-xline' !default; // TODO build in xline alignment
 
-@mixin space-font-preset($font-preset: default, $line-height: default, $baseline: true) {
+@mixin space-font-preset($font-preset: default, $line-height: default, $set-align-classes: true) {
 	// Set mapping of $font-preset values
 	$map-font-size: 1;
 	$map-line-height: 2;
 
 	$font-preset-value: $font-preset;
+
+	$font-family: map-get($font-families, default);
 
 	@if ($font-preset == inherit) {
 		$font-preset-value: default; // Set $font-preset-value to default to still set .align-baseline and .align-capline classes
@@ -46,14 +49,15 @@ $class-align-xline: '.align-xline' !default; // TODO build in xline alignment
 				$translate-y-value: false;
 
 				// Reset baseline correction
-				@if ($baseline == reset) {
-					$translate-y-value: 0; // Reset correction if $baseline is false. Needed in case inherit correction is applied
+				@if ($set-align-classes == reset) {
+					$translate-y-value: 0; // Reset correction if $set-align-classes is false. Needed in case inherit correction is applied
 				}
 
 				// If translate text to baseline
-				@if ($baseline == true) {
+				@if ($set-align-classes == true) {
 					$center-correction: ($line-height-value - $font-size-value) / 2; //$line-height-value Minus default height of font-size Split by 2. So 1.5 becomes .5 split by two become .25
-					$font-correction: $font-size-value * $baseline-correction;
+					$cap-height: map-get($font-family, cap-height);
+					$font-correction: $font-size-value * ((1 - $cap-height )/ 2); // Split correction by 2 because only 50% of the alignments needs to be done
 					$translate-y-value: $center-correction + $font-correction;
 				}
 
@@ -96,18 +100,16 @@ $class-align-xline: '.align-xline' !default; // TODO build in xline alignment
  * @include font-preset(large) => font-size: 24rem; line-height: 3.2rem;
  *
  * @param $font-preset (array-key | inherit) string of array-key of $font-presets
- * @param $baseline (true | false)
+ * @param $set-align-classes (true | false)
  */
-@mixin font-preset($font-preset: default, $baseline: true) {
-	@include space-font-preset($font-preset, true, $baseline);
+@mixin font-preset($font-preset: default, $set-align-classes: true) {
+	@include space-font-preset($font-preset, true, $set-align-classes);
 }
 
 /*
  * Font-size function
- *
- * Todo: reintroduce line-height mixin
  */
-@mixin font-size($font-size-value: default, $baseline: false) {
+@mixin font-size($font-size-value: default, $set-align-classes: false) {
 	@include space-font-preset($font-size-value, false, false);
 }
 
